2007-10-17  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/i386/bits/fcntl.h: Define F_DUPFD_CLOEXEC.
	* sysdeps/unix/sysv/linux/ia64/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/s390/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/sh/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/sparc/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/x86_64/bits/fcntl.h:  Likewise.
	* sysdeps/unix/sysv/linux/alpha/bits/fcntl.h: Likewise.

2007-10-17  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/posix/getaddrinfo.c (getaddrinfo): When sorting addresses
	and admin selects to be able to replace the gai.conf file, lock
	data structures around the qsort call.

2007-10-17  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/x86_64/cacheinfo.c: Comment out code added in support of
	new memset.
	* sysdeps/x86_64/memset.S: Revert to old version for now.  The cost is
	too high for the improvements.  Implement bzero unconditionally for
	use in libc.

2007-10-17  Ulrich Drepper  <drepper@redhat.com>
	    Jakub Jelinek  <jakub@redhat.com>

	* time/tzfile.c (__tzfile_read): Read POSIX TZ string if available
	even when time_t is 32-bit.
	(__tzfile_compute): Override POSIX TZ string STD/DST zone names if
	timezone data read by __tzfile_default.  Ensure __tzname[0] is
	always set after the search.

2007-10-16  Ulrich Drepper  <drepper@redhat.com>

	* time/tzfile.c (__tzfile_read): Help the compiler recognize
	unreachable code on 32-bit machines.

2007-10-16  Jakub Jelinek  <jakub@redhat.com>

	[BZ #5184]
	* time/strftime_l.c: Include stdbool.h.
	(my_strftime): New wrapper, old function renamed to...
	(__strftime_internal): ... new function.  Add tzset_called
	argument, pass it down to recursive calls, don't call tzset ()
	if already true, set to true after call to tzset ().

2007-10-16  Ulrich Drepper  <drepper@redhat.com>

	* time/tzfile.c (__tzfile_read): Take extra memory requested by caller